# CRC_Calculator

./: CMakeLists.txt  LICENSE  README.md
inc/: BZip32BitCRC.h  CCITTFalse16BitCRC.h  CRC32Bit.h  CRC8Bit.h  ICRC.h  Modbus16BitCRC.h  XModem16BitCRC.h
src/: BZip32BitCRC.cpp  CCITTFalse16BitCRC.cpp  CRC32Bit.cpp  CRC8Bit.cpp  CRCHelper.hpp  ICRC.cpp  Modbus16BitCRC.cpp  XModem16BitCRC.cpp
test/: CRC_Test.cpp
